@@ -1,3 +1,11 @@
+2008-02-07  Bastien Nocera  <hadess@hadess.net>
+
+	* src/plugins/lirc/totem-lirc.c: (totem_lirc_to_command):
+	* src/totem.c: (totem_action_remote):
+	* src/totem.h: Patch from Carsten Luedtke
+	<acid_man@gmx.net> to allow setting the aspect ratio using
+	LIRC (Closes: #514832)
+
 2008-02-06  Bastien Nocera  <hadess@hadess.net>
 
 	* src/backend/bacon-video-widget-xine.c: (xine_event):
